# l7router

components/dependency-learner/: Cargo.toml  Makefile
components/dependency-learner/src/: lib.rs
tests/: go.mod  go.sum
tests/istio/: cluster.yaml  dependencylearner_test.go  main_test.go
