[package]
name = "dependency-learner"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
crate-type = ["cdylib"]

[dependencies]
log = "0.4.21"
proxy-wasm = "0.2.1"
serde = { version = "1.0.203", features = ["derive"] }
serde_json = "1.0.117"

[profile.release]
lto = true
opt-level = 3
codegen-units = 1
panic = "abort"
strip = "debuginfo"
